--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
-  <img src="me.jpg" class="img-responsive img-circle margin" style="display:inline" alt="ME" width="350" height="350">
+  <img src="../../assets/me.jpg" class="img-responsive img-circle margin" style="display:inline" alt="ME" width="350" height="350">
   <h3>I'm an adventurer</h3>
 </div>
 
